--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
-  "name": "fullstack-boilerplate",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "watch": "tsc -w",
-		"dev": "nodemon dis/index.js",
-    "start": "node dist/index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^18.6.3",
-    "nodemon": "^2.0.19",
-    "typescript": "^4.7.4"
-  }
+	"name": "fullstack-boilerplate",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"watch": "tsc -w",
+		"dev": "nodemon dist/index.js",
+		"start": "node dist/index.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/node": "^18.6.3",
+		"nodemon": "^2.0.19",
+		"typescript": "^4.7.4"
+	},
+	"dependencies": {
+		"@mikro-orm/cli": "^5.2.4",
+		"@mikro-orm/core": "^5.2.4",
+		"@mikro-orm/migrations": "^5.2.4",
+		"@mikro-orm/postgresql": "^5.2.4",
+		"pg": "^8.7.3"
+	},
+	"mikro-orm": {
+		"useTsNode": true,
+		"configPaths": [
+			"./src/mikro-orm.config.ts",
+			"./dist/mikro-orm.config.js"
+		]
+	}
 }
