--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@types/express": "^4.17.13",
 		"@types/node": "^18.6.3",
 		"nodemon": "^2.0.19",
 		"typescript": "^4.7.4"
@@ -21,7 +22,11 @@
 		"@mikro-orm/core": "^5.2.4",
 		"@mikro-orm/migrations": "^5.2.4",
 		"@mikro-orm/postgresql": "^5.2.4",
-		"pg": "^8.7.3"
+		"apollo-server-express": "^3.10.0",
+		"express": "^4.18.1",
+		"graphql": "^15.8.0",
+		"pg": "^8.7.3",
+		"type-graphql": "^1.1.1"
 	},
 	"mikro-orm": {
 		"useTsNode": true,
