--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"watch": "tsc -w",
 		"dev": "nodemon dist/index.js",
-		"start": "node dist/index.js", 
+		"start": "node dist/index.js",
 		"create:migration": "mikro-orm migration:create"
 	},
 	"keywords": [],
@@ -16,6 +16,7 @@
 		"@types/express": "^4.17.13",
 		"@types/node": "^18.6.3",
 		"nodemon": "^2.0.19",
+		"ts-node": "^10.9.1",
 		"typescript": "^4.7.4"
 	},
 	"dependencies": {
@@ -24,6 +25,7 @@
 		"@mikro-orm/migrations": "^5.2.4",
 		"@mikro-orm/postgresql": "^5.2.4",
 		"apollo-server-express": "^3.10.0",
+		"argon2": "^0.28.7",
 		"express": "^4.18.1",
 		"graphql": "^15.8.0",
 		"pg": "^8.7.3",
